syntax = "proto3";

option go_package = "github.com/ICBench/icb-message-agent";

import "google/protobuf/empty.proto";


enum MessageLevel {
  INFO = 0;
  WARN = 1;
  ERROR = 2;
}

message SendMessageRequest {
  string taskId = 1;
  MessageLevel level = 2;
  string message = 3;
  repeated string args = 4;
}

service TaskMessageService {
  rpc SendMessage (SendMessageRequest) returns (google.protobuf.Empty) {
  }
}
